Fix code block whitespace printing

--- a/jjw-markdown.css
+++ b/jjw-markdown.css
@@ -58,8 +58,8 @@ p {
   text-align: left;
 }
 
-pre {
-  white-space: pre-wrap;
+pre, pre > code {
+  white-space: pre-wrap !important;
 }
 
 .vscode-body .octicon {
